# WellvectorCase

./: .env  .env.example  .gitignore  PITCH.md  README.md  pyproject.toml
.claude/: settings.local.json
data/: top10_casing_docs.csv  top10_docs.csv  top5_docs.csv
output/: casing_audit.csv  casing_output.csv  test_debug.csv  test_debug_audit.csv  test_dedup.csv  test_dedup_audit.csv
src/wellvector_pipeline/: __init__.py  claude_fallback.py  cli.py  document_priorities.py  download.py  metadata.py  models.py  normalize.py  parser.py  pdf_extract.py  pipeline.py
src/wellvector_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
